<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_pause"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:title="@string/pause"/>
    <item
        android:id="@+id/action_analytics"
        android:orderInCategory="104"
        android:title="@string/analytics"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="104"
        android:title="@string/settings"/>
    <item
        android:id="@+id/action_achievements"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/achievements"/>
    <item
        android:id="@+id/action_leaderboard"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/leaderboard"/>
    <item
        android:id="@+id/action_faq"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/faq"/>
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="103"
        android:title="@string/profile" />
    <item
        android:id="@+id/action_split_count"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/split_count"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/about"/>

</menu>